--- a/Core/requirements.txt
+++ b/Core/requirements.txt
@@ -11,5 +11,6 @@ ultralytics>=8.0.147
 setuptools>=69.2.0
 gitpython>=3.1.30
 
+# TODO add requirements json and tkinter (gui)
 
 # OBS Studio for webcam capture
