--- a/Core/requirements.txt
+++ b/Core/requirements.txt
@@ -6,10 +6,11 @@
 keyboard>=0.13.5
 numpy>=1.22.2
 opencv-python>=4.1.1
-torch>=1.8.0
-ultralytics>=8.0.147
-setuptools>=69.2.0
+torch>=1.8.0a
+ultralytics==8.2.2
+setuptools==69.5.1
 gitpython>=3.1.30
+tkinter>=8.6.10
 
 # TODO add requirements json and tkinter (gui)
 
